--- a/style.css
+++ b/style.css
@@ -93,3 +93,12 @@ footer {
     padding-left: 1em;
   }
 }
+
+#typed2::after {
+  content: '|';
+  animation: blink 1s infinite;
+}
+@keyframes blink {
+  0%, 50% { opacity: 1; }
+  51%, 100% { opacity: 0; }
+}
